Fix footer alignments,README.md

--- a/style.css
+++ b/style.css
@@ -153,12 +153,25 @@ button {
 }
 
 footer {
-  margin-left: 5%;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 1rem;
   padding: 8px;
-  border-radius: 3px;
-  height: 30px;
-  width: 90%;
   background: rgb(226, 223, 223);
-  margin-top: 14%;
+  text-align: center;
+}
+
+.notification {
+  border: 1px solid lightgreen;
+  color: darkolivegreen;
+  font-size: 14px;
+  left: 40%;
+  top: 10%;
+  padding: 5px;
+  z-index: 9999;
+  width: 20%;
+  display: none;
+  position: absolute;
   text-align: center;
 }
